<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/artimageView"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_launcher_background" />

    <EditText
        android:id="@+id/nametext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:hint="Isim giriniz"
        android:inputType="textPersonName"

        />

    <EditText
        android:id="@+id/artisttext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="3dp"
        android:ems="10"
        android:hint="Sanatci giriniz"
        android:inputType="textPersonName"
         />

    <EditText
        android:id="@+id/yeartext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Yıl giriniz"
        android:inputType="textPersonName"
         />

    <Button
        android:id="@+id/savebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="Kaydet"

        />
</LinearLayout>